Provided two models

--- a/model_svm.ipynb
+++ b/model_svm.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# Update sklearn to prevent version mismatches\n",
-    "!pip install sklearn --upgrade"
+    "#!pip install sklearn --upgrade"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "source": [
     "# install joblib. This will be used to save your model. \n",
     "# Restart your kernel after installing \n",
-    "!pip install joblib"
+    "#!pip install joblib"
    ]
   },
   {
@@ -27,7 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -64,8 +65,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "\n",
     "# Set features. This will also be used as your x values.\n",
-    "selected_features = df[['names', 'of', 'selected', 'features', 'here']]"
+    "selected_features = df.drop(\"koi_disposition\", axis=1)\n",
+    "\n",
+    "X = selected_features\n",
+    "y = df[\"koi_disposition\"]"
    ]
   },
   {
@@ -82,7 +90,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
@@ -108,7 +118,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale your data"
+    "# Scale your data\n",
+    "X_scaler = MinMaxScaler().fit(X_train)\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -125,8 +138,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Training Data Score: {model2.score(X_train_scaled, y_train)}\")\n",
-    "print(f\"Testing Data Score: {model2.score(X_test_scaled, y_test)}\")"
+    "from sklearn.svm import SVC\n",
+    "model = SVC(kernel=\"linear\")\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "prediction = model.predict(X_test)\n",
+    "print(f\"Training Data Score: {model.score(X_train_scaled, y_train)}\")\n",
+    "print(f\"Testing Data Score: {model.score(X_test_scaled, y_test)}\")"
    ]
   },
   {
@@ -144,7 +161,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the GridSearchCV model"
+    "# Create the GridSearchCV model\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "param_grid = {\"C\": [1, 5, 10],\n",
+    "             \"gamma\": [0.0001, 0.001, 0.01]}\n",
+    "grid = GridSearchCV(model, param_grid, verbose=3)"
    ]
   },
   {
@@ -153,7 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the model with GridSearch"
+    "# Train the model with GridSearch\n",
+    "grid.fit(X_train_scaled, y_train)"
    ]
   },
   {
@@ -162,8 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(grid2.best_params_)\n",
-    "print(grid2.best_score_)"
+    "print(grid.best_params_)\n",
+    "print(grid.best_score_)"
    ]
   },
   {
@@ -184,9 +206,16 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'your_name.sav'\n",
-    "joblib.dump(your_model, filename)"
+    "filename = 'brandonSU_svm.sav'\n",
+    "joblib.dump(SVC, filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -194,9 +223,9 @@
    "name": "dev"
   },
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "0.12.3"
